[workspace]

members = [
    "web-markdown",
    "dioxus-markdown",
    "leptos-markdown",
    "yew-markdown",
    "dioxus-markdown/examples/*",
    "leptos-markdown/examples/*",
    "yew-markdown/examples/*",
]
resolver = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
