[package]
name = "dioxus-markdown"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A dynamic markdown component for the dioxus framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6.0"
web-framework-markdown = { version = "0.0.1", path = "../web-markdown/", default-features = false }

[features]
debug = ["web-framework-markdown/debug"]
default = []
