[package]
name = "dioxus-markdown"
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6.0"
web-framework-markdown = { path = "../web-markdown/", default-features = false }

[features]
debug = ["web-framework-markdown/debug"]
maths = ["web-framework-markdown/maths"]
default = []
