[package]
name = "dioxus-markdown"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/rambip/rust-web-markdown"
description = "A dynamic markdown component for the dioxus framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.7.0"
web-framework-markdown = { version = "0.0.1", path = "../web-markdown/", default-features = false }

[features]
default = ["maths"]
debug = ["web-framework-markdown/debug"]
maths = ["web-framework-markdown/maths"]
