[package]
name = "leptos-markdown"
version = "0.6.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.14", features = ["csr"]}

rust-web-markdown = { path = "../web-markdown/", default-features = false}

wasm-bindgen = "0.2.93"

[features]
default = []
debug = ["rust-web-markdown/debug"]
