[package]
name = "leptos-markdown"
version = "0.7.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }

web-framework-markdown = { path = "../web-markdown/", default-features = false }

wasm-bindgen = "0.2.93"

[features]
default = ["maths"]
debug = ["web-framework-markdown/debug"]
maths = ["web-framework-markdown/maths"]
