[package]
name = "rust-web-markdown"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.61", features = ["MouseEvent"] }
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
katex = { version = "0.4", default-features = false, features = [
    "wasm-js",
], optional = true }
lazy_static = "1.4.0"
pulldown-cmark = "0.13.0"

[features]
default = ["maths"]
debug = []
maths = ["katex"]
