[package]
name = "yew-markdown"
version = "0.2.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"

wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

rust-web-markdown = { path = "../web-markdown/", default-features = false}
web-sys = { version = "0.3", features = [] }

[features]
# TODO: This should not be needed to enable debug to work around build error from feature resolution issue
default = ["debug"]
debug = ["rust-web-markdown/debug"]
