[package]
name = "yew-markdown"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A dynamic markdown component for the Yew framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"

wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

web-framework-markdown = { version = "0.0.1", path = "../web-markdown/" }
web-sys = { version = "0.3", features = [] }

[features]
default = ["maths"]
debug = ["web-framework-markdown/debug"]
maths = ["web-framework-markdown/maths"]
