[package]
name = "dioxus-custom-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6"
dioxus-markdown = { path = "../../" }


[dev-dependencies]
pretty_assertions = "1.4.1"
dioxus-ssr = "0.6.2"